fix flex positioning on mobile filter

--- a/hackathon_site/dashboard/frontend/src/components/inventory/InventoryFilter/InventoryFilter.module.scss
+++ b/hackathon_site/dashboard/frontend/src/components/inventory/InventoryFilter/InventoryFilter.module.scss
@@ -3,7 +3,7 @@
 
 .filter {
     height: 100%;
-    @include flexPosition;
+    display: flex;
     flex-direction: column;
 
     span {
@@ -41,6 +41,7 @@
 
     @include responsive(md-down) {
         width: 100%;
+        justify-content: space-between;
 
         &Paper {
             box-shadow: none;
